[package]
name = "wg-turn"
version = "1.1.3"
edition = "2021"

[dependencies]
futures = "0.3.8"
anyhow = "1.0"
# stun-client = "0.1.4"
wireguard-uapi = "3.0.0"
# datetime = "0.5.2"
socket2 = "0.5.5"
btdht = { git = "https://github.com/equalitie/btdht.git"}
tokio = { version = "1.32", default_features = false, features = [
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "signal",
] }
rand = { version = "0.8.5", features = ["small_rng"] }
# concat-arrays = "0.1.2"
# async-trait   = "0.1.73"
base64 = "0.22.0"
serde = "1.0"
serde_bencode = "0.2.4"
crypto_box = { version = "0.9.1" , features = ["chacha20"] }
generic-array =  { version = "0.14.7", features = ["serde"] }
blake3 = { version = "1.5.1", features = ["serde"] }

[profile.release]
strip = true 
opt-level = "s" #z or s
lto = true
codegen-units = 1
panic = "abort"
